# NorthStarSDK

./: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
examples/: read-demo.ts
examples/sonic-counter/: counter-demo.ts
router/: Anchor.toml  Cargo.toml  README.md
router/programs/router/: Cargo.toml
router/programs/router/src/: errors.rs  events.rs  lib.rs  types.rs  utils.rs
router/programs/router/src/instructions/: close_expired.rs  deposit_fee.rs  mod.rs  open_session.rs  send.rs
router/programs/router/src/state/: fee_vault.rs  mod.rs  outbox.rs  session.rs
router/tests/: router.ts
src/: index.ts
src/builders/: TransactionBuilder.ts
src/config/: networks.ts
src/programs/: router.ts
src/readers/: AccountResolver.ts  HSSNReader.ts  SonicReader.ts
src/session/: SessionManager.ts
src/types/: index.ts
src/utils/: pda.ts
tests/: AccountResolver.test.ts  integration.test.ts
