[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
# XXX: do we need it though?
overflow-checks = true

# Separate very slow profile with lots of opinionated optimizations
[profile.production]
inherits = "release"
lto = "fat"
opt-level = 3
incremental = false
codegen-units = 1
